4-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moesonarqube-app-lb
spec:
  # type: ClusterIP
  # Enable following and disable above line, if using nginx-proxy as a front end for this(for example for setting in TLS), since following Static Public IP address
  # should be associated with ninnx controller instead of this service
  type: LoadBalancer
  loadBalancerIP: 20.193.59.208
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: moesonarqube-app
---
# Ref: https://docops.ca.com/ca-api-gateway/9-4/en/other-gateway-form-factors/using-the-container-gateway/getting-started-with-the-container-gateway/run-the-container-gateway-on-kubernetes/configure-environment-variables-in-kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moesonarqube-app-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  selector:
      matchLabels:
        app: moesonarqube-app
  template:
    metadata:
      labels:
        app: moesonarqube-app
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      volumes:
      - name: azure-container-volume-reference
        persistentVolumeClaim:
          claimName: sonarqube-fileshare-pvc
      containers:
      - name: moesonarqube-app
      # Version being used is - Version 7.9.1 (build 27448). Doker image version is - 7.9.1-community - https://hub.docker.com/layers/sonarqube/library/sonarqube/7.9.1-community/images/sha256-8f3615a9ce0fbada6b9ef4f613a9ea1d7a39fa892ee3189e8a227eaa82b19c05
        image: sonarqube:7.9.1-community
        # https://appdevmusings.com/deploy-sonarqube-to-azure-kubernetes-service-cluster-and-integrate-with-azure-devops-build-pipeline
        volumeMounts:
        - name: azure-container-volume-reference
          mountPath: "/opt/sonarqube/conf"
          subPath: conf
        - name: azure-container-volume-reference
          mountPath: "/opt/sonarqube/data"
          subPath: data
        - name: azure-container-volume-reference
          mountPath: "/opt/sonarqube/logs"
          subPath: logs
        - name: azure-container-volume-reference
          mountPath: "/opt/sonarqube/extensions"
          subPath: extensions
        ports:
        - containerPort: 9000
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: "2Gi"
          limits:
            cpu: 500m
            memory: "3Gi"
